--- a/visualization_project/Defi_Chains(Crawling).ipynb
+++ b/visualization_project/Defi_Chains(Crawling).ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "pc = pd.read_csv(\"data/chain-dataset-All2.csv\")"
+    "pc = pd.read_csv(\"chain-dataset-All2.csv\")"
    ]
   },
   {
